# AISOHackathon

./: .env  .gitignore  JobMatchAgent.py  JobMatching.ipynb  JobMatching.py  README.md  langgraph.json  pyproject.toml  requirements.txt
agentkit/: .env  agent - Copy.py  agent.py  base_model.py  config.py  extract_metadata_cv.py  extract_summary_AND_metadata_cv.py  graph.py  long_term.py  main.py  memory.py  mock.py  models.py  parse_msg.py  requirements.txt  seed_data.py  send_mail.py  state.py  tools.py
agentkit/modules/: action_agent.py  agent.py  extract_cv_metadata_gemini.py  google_auth.py  graph.py  job_matching.py  job_matching_langgraph.py  job_updater.py  utils.py
frontend/: .gitignore  README.md  package-lock.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AnimatedLogo.tsx  AppFooter.tsx  AppHeader.tsx  ApplicationsSummary.tsx  ApplyModal.tsx  Background3D.tsx  CareerSpringNav.tsx  EmailDetailDialog.tsx  JobCard.tsx  JobMatchCard.tsx  LikedJobsList.tsx
frontend/src/hooks/: useScrollAnimation.tsx
frontend/src/pages/: DislikedJobs.tsx  Matches.tsx  OnboardingStep2.tsx  OnboardingStep3.tsx  Profile.tsx  SavedCareers.tsx
frontend/supabase/: config.toml
frontend/supabase/migrations/: 20251109105840_62aa180f-373c-4929-ab03-e8bf1389267b.sql
pulse-robot-template-80842/: index.html  package.json
pulse-robot-template-80842/src/: App.tsx
pulse-robot-template-80842/src/components/: InboxEmailCard.tsx  JargonDecoderCard.tsx
pulse-robot-template-80842/src/pages/: CareerSpringLanding.tsx  Matches.tsx  NotFound.tsx  (+2 more)
(+9 files in other folders)
